Fixed weather icon alignment

--- a/style.css
+++ b/style.css
@@ -15,14 +15,13 @@ body {
 */
 body {
     background: url("https://source.unsplash.com/category/nature/1600x900") no-repeat center center fixed;
-
+    font-family: Lato, Helvetica;
     background-size: cover;
 
     color: white;
 }
 .weather {
  /*   background-color: rgba(130, 160, 126, 0.701961); */
-    width: 70px;
     border-bottom-left-radius: 10px;
     position: absolute;
     top: 0px;
@@ -33,8 +32,9 @@ body {
 }
 
 .weather img {
-    position: absolute;
+   /position: absolute;
     width: 40px;
+    vertical-align: middle;
     top: 0;
     left: 0;
 }
@@ -81,7 +81,7 @@ body {
 }
 
 .mainForm input{    
-    background: rgba(255, 255, 255, 0.5);
+    background: rgba(80, 80, 95, 0.7);
     width: 100%;
     height: 2em;
     color: white;
